--- a/cat.html
+++ b/cat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="EN">
 <head>
-    <title>Cats</title>
+    <title>Cat Info</title>
     <meta charset="utf-8" />
     <link href="cat.css" rel="stylesheet" />
 
