--- a/cat.html
+++ b/cat.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="EN">
 <head>
-    <title>Cat Info</title>
+    <title>Cat</title>
     <meta charset="utf-8" />
     <link href="cat.css" rel="stylesheet" />
 
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="cat.html">Home</a></li>
+            <li><a href="catInfo.html">Home</a></li>
+            <li><a href="catfaq.html">Home</a></li>
+        </ul>
+    </nav>
+
+
     <h1>Daily Cat Fact</h1>
     <p id="cat-fact">please work this time</p>
 
