--- a/catfaq.html
+++ b/catfaq.html
@@ -8,13 +8,15 @@
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="cat.html">Home</a></li>
-            <li><a href="catInfo.html">Home</a></li>
-            <li><a href="cat.faq.html">Home</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="cat.html">Home</a></li>
+                <li><a href="catInfo.html">Information</a></li>
+                <li><a href="catfaq.html">FAQs</a></li>
+            </ul>
+        </nav>
+    </header>
 
 </body>
 
