--- a/cat.html
+++ b/cat.html
@@ -3,13 +3,16 @@
 <head>
     <title>Cat</title>
     <meta charset="utf-8" />
+    <link href="catReset.css" rel="stylesheet" />
     <link href="cat.css" rel="stylesheet" />
 
 </head>
 
 <body>
     <header>
-        <nav>
+        <img src="catPicture.png" alt="cat" />
+
+        <nav class="navi">
             <ul>
                 <li><a href="cat.html">Home</a></li>
                 <li><a href="catInfo.html">Information</a></li>
@@ -19,7 +22,7 @@
     </header>
 
 
-    <h1>Daily Cat Fact</h1>
+    <h2>Daily Cat Fact</h2>
     <p id="cat-fact">please work this time</p>
 
     <script>
