--- a/catfaq.html
+++ b/catfaq.html
@@ -3,13 +3,16 @@
 <head>
     <title>Cat FAQs</title>
     <meta charset="utf-8" />
+    <link href="catReset.css" rel="stylesheet" />
     <link href="cat.css" rel="stylesheet" />
 
 </head>
 
 <body>
     <header>
-        <nav>
+        <img src="catPicture.png" alt="cat" />
+
+        <nav class="navi">
             <ul>
                 <li><a href="cat.html">Home</a></li>
                 <li><a href="catInfo.html">Information</a></li>
@@ -17,6 +20,11 @@
             </ul>
         </nav>
     </header>
+
+    <article>
+        
+    </article>
+
 
 </body>
 
