--- a/catInfo.html
+++ b/catInfo.html
@@ -3,13 +3,16 @@
 <head>
     <title>Cat Info</title>
     <meta charset="utf-8" />
+<link href="catReset.css" rel="stylesheet" />
     <link href="cat.css" rel="stylesheet" />
 
 </head>
 
 <body>
     <header>
-        <nav>
+        <img src="catPicture.png" alt="cat" />
+
+        <nav class="navi">
             <ul>
                 <li><a href="cat.html">Home</a></li>
                 <li><a href="catInfo.html">Information</a></li>
@@ -18,6 +21,9 @@
         </nav>
     </header>
 
+    <article>
+
+    </article>
 
 
 </body>
