--- a/cat.html
+++ b/cat.html
@@ -3,8 +3,8 @@
 <head>
     <title>Cat</title>
     <meta charset="utf-8" />
-    <link href="catReset.css" rel="stylesheet" />
-    <link href="cat.css" rel="stylesheet" />
+    <link href="static/catReset.css" rel="stylesheet" />
+    <link href="static/cat.css" rel="stylesheet" />
 
 </head>
 
